# ansible-age-vault

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ansible_age_vault/: __init__.py  age_utils.py  exceptions.py  plugin.yml  vault.py
tests/: .age-key.txt  .age-recipients  test_age_utils.py  test_vault_basic.py
